fix: make ETL compatible with Java 8 (#860)